:bug: Fixing some layout bugs.

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body,
-:root {
-  height: 100%;
+@layer body {
+  body {
+    @apply bg-brand-500 ;
+  }
+}
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
 }
